--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.20
-
-    - name: Tidy
-      run: go mod tidy
+        go-version-file: go.mod
       
     - name: Build
       run: go build -v ./...
