Fix file type so the config is not replaced on re-install

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -47,6 +47,7 @@ nfpms:
     contents:
       - src: ./config.yaml
         dst: /etc/shellhook/config.yaml
+        type: config|noreplace
         file_info:
           mode: 0600
       - src: ./packaging/shellhook.service
