--- a/packaging/shellhook.service
+++ b/packaging/shellhook.service
@@ -4,8 +4,10 @@ After=syslog.target network.target
 
 [Service]
 User=root
-ExecStart=/usr/bin/shellhook -config /etc/shellhook/config.yaml 2>&1 | tee -a /var/log/shellhook.log
+ExecStart=/usr/bin/shellhook -config /etc/shellhook/config.yaml
 Restart=always
+StandardError=append:/var/log/shellhook.log
+StandardOutput=append:/var/log/shellhook-errors.log
 
 [Install]
 WantedBy=multi-user.target
