--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,6 +7,8 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
+    ldflags:
+      - '-s -w -X main.Version={{.Version}} -X main.Commit={{.Commit}} -X main.Date={{.Date}} -X main.BuiltBy=goreleaser'
 
 archives:
   - format: tar.gz
