--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,14 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
