Reduce the amount of text in build flags and add descriptions

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -66,9 +66,11 @@ dockers:
       - "ghcr.io/jadolg/shellhook:debian-{{ .Tag }}-amd64"
       - "ghcr.io/jadolg/shellhook:debian-v{{ .Major }}.{{ .Minor }}-amd64"
     use: buildx
-    build_flag_templates:
+    build_flag_templates: &build_flag_templates_amd64
       - "--pull"
       - "--platform=linux/amd64"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.description Shellhook is a tool to execute shell scripts remotely with an HTTP call"
 
   - id: shellhook-debian-arm64
     dockerfile: debian.Dockerfile
@@ -78,9 +80,11 @@ dockers:
       - "ghcr.io/jadolg/shellhook:debian-{{ .Tag }}-arm64"
       - "ghcr.io/jadolg/shellhook:debian-v{{ .Major }}.{{ .Minor }}-arm64"
     use: buildx
-    build_flag_templates:
+    build_flag_templates: &build_flag_templates_arm64
       - "--pull"
       - "--platform=linux/arm64"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.description Shellhook is a tool to execute shell scripts remotely with an HTTP call"
 
   - id: shellhook-ubuntu-amd64
     dockerfile: ubuntu.Dockerfile
@@ -89,9 +93,7 @@ dockers:
       - "ghcr.io/jadolg/shellhook:ubuntu-latest-amd64"
       - "ghcr.io/jadolg/shellhook:ubuntu-{{ .Tag }}-amd64"
       - "ghcr.io/jadolg/shellhook:ubuntu-v{{ .Major }}.{{ .Minor }}-amd64"
-    build_flag_templates:
-      - "--pull"
-      - "--platform=linux/amd64"
+    build_flag_templates:  *build_flag_templates_amd64
 
   - id: shellhook-ubuntu-arm64
     dockerfile: ubuntu.Dockerfile
@@ -101,9 +103,7 @@ dockers:
       - "ghcr.io/jadolg/shellhook:ubuntu-latest-arm64"
       - "ghcr.io/jadolg/shellhook:ubuntu-{{ .Tag }}-arm64"
       - "ghcr.io/jadolg/shellhook:ubuntu-v{{ .Major }}.{{ .Minor }}-arm64"
-    build_flag_templates:
-      - "--pull"
-      - "--platform=linux/arm64"
+    build_flag_templates: *build_flag_templates_arm64
 
   - id: shellhook-alpine-amd64
     dockerfile: alpine.Dockerfile
@@ -112,9 +112,7 @@ dockers:
       - "ghcr.io/jadolg/shellhook:alpine-{{ .Tag }}-amd64"
       - "ghcr.io/jadolg/shellhook:alpine-v{{ .Major }}.{{ .Minor }}-amd64"
     use: buildx
-    build_flag_templates:
-      - "--pull"
-      - "--platform=linux/amd64"
+    build_flag_templates: *build_flag_templates_amd64
 
   - id: shellhook-alpine-arm64
     dockerfile: alpine.Dockerfile
@@ -124,9 +122,7 @@ dockers:
       - "ghcr.io/jadolg/shellhook:alpine-{{ .Tag }}-arm64"
       - "ghcr.io/jadolg/shellhook:alpine-v{{ .Major }}.{{ .Minor }}-arm64"
     use: buildx
-    build_flag_templates:
-      - "--pull"
-      - "--platform=linux/arm64"
+    build_flag_templates: *build_flag_templates_arm64
 
 docker_manifests:
   - name_template: "ghcr.io/jadolg/shellhook:debian-latest"
@@ -143,7 +139,7 @@ docker_manifests:
     image_templates:
       - "ghcr.io/jadolg/shellhook:debian-v{{ .Major }}.{{ .Minor }}-amd64"
       - "ghcr.io/jadolg/shellhook:debian-v{{ .Major }}.{{ .Minor }}-arm64"
-        
+
   - name_template: "ghcr.io/jadolg/shellhook:ubuntu-latest"
     image_templates:
       - "ghcr.io/jadolg/shellhook:ubuntu-latest-amd64"
