Add example of shell configuration to config file

--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,7 @@ scripts:
     inline: |
       echo "Hello, world!"
   - id: 34ca006a-ece6-11ee-a395-17c174ecf4c7
+    shell: /bin/sh
     inline: |
       echo "Hello, $TITLE $NAME!"
     environment:
