--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,7 +11,8 @@ builds:
       - '-s -w -X main.Version={{.Version}} -X main.Commit={{.Commit}} -X main.Date={{.Date}} -X main.BuiltBy=goreleaser'
 
 archives:
-  - format: tar.gz
+  - formats:
+      - tar.gz
     name_template: >-
       {{ .ProjectName }}_
       {{- title .Os }}_
@@ -22,7 +23,7 @@ archives:
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+  version_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
@@ -41,6 +42,7 @@ nfpms:
     license: MIT
     formats:
       - deb
+      - rpm
     bindir: /usr/bin
     section: default
     priority: extra
